Fix GIF dimensions on mobile

--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -81,6 +81,11 @@ body {
   * {
     font-size: 41.25%;
   }
+  body {
+    max-width: 100%;
+    height: auto;
+    background-position: 50% 50%;
+  }
   .weather-data {
     width: 100%;
   }
